externalize test resources - add JavaResourceLoader - 1/10/378